# distributed-training-system

./: COMPLETION_SUMMARY.md  Dockerfile.api  Dockerfile.coordinator  Dockerfile.worker  README.md  docker-compose.yml  requirements.txt  validate.py
api/: job_manager.py  main.py
api/logs/: index.json
checkpoints/demo-job/worker_0/: HEARTBEAT  LATEST
checkpoints/demo-job/worker_0/step_105/: state.json
checkpoints/demo-job/worker_0/step_110/: state.json
checkpoints/demo-job/worker_0/step_115/: state.json
checkpoints/demo-job/worker_0/step_120/: state.json
checkpoints/demo-job/worker_0/step_125/: state.json
checkpoints/demo-job/worker_0/step_130_tmp/: state.json
checkpoints/demo-job/worker_0/step_135/: state.json
checkpoints/demo-job/worker_0/step_140/: state.json
checkpoints/demo-job/worker_1/: HEARTBEAT
checkpoints/demo-job/worker_2/: HEARTBEAT  LATEST
checkpoints/demo-job/worker_3/: HEARTBEAT  LATEST
checkpoints/job-6af7dbb2/worker_2/: LATEST
checkpoints/job-bf697e68/worker_0/: HEARTBEAT
checkpoints/job-bf697e68/worker_1/: HEARTBEAT
checkpoints/job-bf697e68/worker_2/: HEARTBEAT
checkpoints/job-bf697e68/worker_3/: HEARTBEAT
checkpoints/job-cb3f2279/worker_1/: LATEST
coordinator/: Cargo.toml
coordinator/src/: main.rs
data/shards/: shard_00000.txt  shard_00001.txt  shard_00002.txt  shard_00003.txt  shard_00004.txt  shard_00005.txt  shard_00006.txt  shard_00007.txt
demo/: coordinator.py  make_dataset.py  s3_utils.py  training.py  worker.py
k8s/: 01-namespace-config.yaml  02-minio.yaml  03-coordinator.yaml  04-api.yaml
(+185 files in other folders)
